# smoltorch

./: README.md  nb.ipynb  nb.py  pyproject.toml
.github/workflows/: publish.yml
examples/: train_classification.py  train_regression.py
micrograd/: engine.py  nn.py
nanotorch/: nn.py  tensor.py
tests/: test_activations.py  test_add.py  test_linear.py  test_matmul.py  test_mlp.py  test_mul.py  test_reductions.py
