[project]
name = "karpathy-micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "mlx>=0.29.4",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
packages = ["nanotorch", "micrograd"]
